--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "enflow-nl/php-encryption",
+    "name": "profideo/php-encryption",
     "description": "Secure PHP Encryption Library",
     "license": "MIT",
     "keywords": ["security", "encryption", "AES", "openssl", "cipher", "cryptography", "symmetric key cryptography", "crypto", "encrypt", "authenticated encryption"],
